improved state, changes in style

--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -1,5 +1,5 @@
 $default-font-color: #000;
-$background-color: #4a90e2;
+$background-color: #5565DF;
 $container-background-color: #f2f2f2;
 $container-border-color: #000;
 $textbox-border-color: lightgray;
@@ -8,12 +8,15 @@ $button-hover-color: #000;
 
 ///////////////////////////////////////////////
 // button colors
-$add-button-color: #4caf50;
-$remove-button-color: #9f6060;
-$rules-button-color: rgb(15, 12, 216);
-$miss-button-color: #9f6060;
-$made-button-color: #4caf50;
-$home-button-color: rgb(15, 12, 216);;
+$add-button-color: #44BB5D;
+$remove-button-color: #BB5D44;
+$rules-button-color:#5565DF;
+$standings-button-color:#5565DF;
+$miss-button-color: #BB5D44;
+$made-button-color: #44BB5D;
+$home-button-color: #5565DF;
+$play-button-color: #44BB5D;
+$back-button-color: #BB5D44;
 ///////////////////////////////////////////////
 
 
