--- a/src/assets/sass/games/_game33.scss
+++ b/src/assets/sass/games/_game33.scss
@@ -12,6 +12,7 @@
             background-color: $rules-button-color;
             width: 7rem;
             font-size: 1.25rem;
+            margin: auto;
             padding: 0.75rem;
             @include mq(768) {
                 font-size: 1.5rem;
