--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -3,3 +3,5 @@
 @import "_new-player-entry";
 @import "_list-container";
 @import "./games/game33";
+@import "./home/home";
+@import "./rules/rules";
