--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,7 +1,6 @@
 @import "_base";
 @import "_shared-classes";
-@import "_new-player-entry";
-@import "_list-container";
 @import "./games/game33";
 @import "./home/home";
 @import "./rules/rules";
+@import "./add-players/add-players";
