--- a/src/assets/sass/_shared-classes.scss
+++ b/src/assets/sass/_shared-classes.scss
@@ -1,3 +1,7 @@
+$danger-color: #BB5D44;
+$success-color: #44BB5D;
+$info-color: #5565DF;
+
 .button {
     width: 15%;
     min-width: 48px;
@@ -17,14 +21,14 @@
     box-shadow: 4px 2px 5px #000;
 }
 
-.play-button {
-    background-color: $play-button-color;
+.results-button, .rules-button, .settings-button, .home-button {
+    background-color: $info-color;
 }
 
-.rules-button {
-    background-color: $rules-button-color;
+.play-button, .made-button, .save-button {
+    background-color: $success-color;
 }
 
-.back-button {
-    background-color: $back-button-color;
+.back-button, .miss-button {
+    background-color: $danger-color;
 }
