add-players view: fixed list height, scrolling added

--- a/src/assets/sass/add-players/_add-players.scss
+++ b/src/assets/sass/add-players/_add-players.scss
@@ -35,8 +35,10 @@
 
 .list-container {
     min-height: 60vh;
+    max-height: 80vh;
     padding: 0.75rem;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
+    overflow-y: scroll;
 
     .list-title {
         display: flex;
@@ -80,4 +82,14 @@
             min-height: 48px;
         }
     }
+}
+
+.list-container {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.list-container::-webkit-scrollbar {
+    display: none;
 }
