--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -4,3 +4,4 @@
 @import "./home/home";
 @import "./rules/rules";
 @import "./add-players/add-players";
+@import "./game-results-view/game-results-view";
