--- a/src/assets/sass/game-results-view/_game-results-view.scss
+++ b/src/assets/sass/game-results-view/_game-results-view.scss
@@ -1,4 +1,28 @@
+.winner-info {
+    padding: 0.3rem;
+
+    table {
+        border-collapse: collapse;
+        width: 100%;
+        table-layout: fixed;
+        text-align: center;
+
+        td  {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            width: 0.5rem;
+            font-size: 1.5rem;
+        }
+
+        .player {
+            width: 1.5rem;
+        }
+    }
+}
+
 .game-results {
+    margin-top: 0.5rem;
     padding: 0.3rem;
 
     .title {
@@ -7,7 +31,7 @@
     }
 
     .results-table {
-        max-height: 75vh;
+        max-height: 70vh;
         overflow-y: scroll;
 
         table {
@@ -50,4 +74,15 @@
             width: 30%;
         }
     }
+}
+
+/* Hide scrollbar for Firefox, IE and Edge */
+.results-table {
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.results-table::-webkit-scrollbar {
+    display: none;
 }
