--- a/src/assets/sass/rules/_rules.scss
+++ b/src/assets/sass/rules/_rules.scss
@@ -7,7 +7,7 @@
             display: flex;
             flex-direction: row;
             justify-content: center;
-            margin-top: 0.2rem;
+            margin: 0.5rem 0;
         }
     
         hr {
@@ -18,17 +18,13 @@
             padding: 1rem;
         }
     }
-}
-
-.nav {
-    margin-top: 0.5rem;
 
     .nav-actions {
         display: flex;
         justify-content: center;
 
         button {
-            width: 45%;
+            width: 30%;
         }
     }
 }
