--- a/src/assets/sass/rules/_rules.scss
+++ b/src/assets/sass/rules/_rules.scss
@@ -1,7 +1,8 @@
 .game-rules {
-    max-height: 80vh;
 
     .general-info {
+        overflow-y: scroll;
+        max-height: 85vh;
         
         .name {
             display: flex;
@@ -12,6 +13,15 @@
     
         hr {
             margin-top: 0.2rem;
+        }
+
+        .image {
+            text-align: center;
+
+            img {
+                width: 75%;
+                height: 30%;
+            }
         }
     
         .rules {
@@ -27,4 +37,14 @@
             width: 30%;
         }
     }
+}
+
+.general-info {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.general-info::-webkit-scrollbar {
+    display: none;
 }
