--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,7 +1,8 @@
 @import "_base";
 @import "_shared-classes";
-@import "./games/game33";
 @import "./home/home";
 @import "./rules/rules";
 @import "./add-players/add-players";
-@import "./game-results-view/game-results-view";
+@import "./game-results/game-results";
+@import "./settings/settings";
+@import "./games/game-around-the-world";
