new views, game manager

--- a/src/assets/sass/home/_home.scss
+++ b/src/assets/sass/home/_home.scss
@@ -43,3 +43,19 @@
         }
     }
 }
+
+.add-players {
+    margin-top: 0.5rem;
+
+    .container {
+        display: flex;
+        margin: 0;
+        padding: 0.3rem;
+        justify-content: center;
+
+        button {
+            width: 7rem;
+            padding: 0.2rem;
+        }
+    }
+}
