--- a/src/assets/sass/_shared-classes.scss
+++ b/src/assets/sass/_shared-classes.scss
@@ -71,7 +71,7 @@ $info-color: #5565DF;
         flex-direction: column;
         padding: 0 0.5rem;
         
-        .settings {
+        .additional {
             display: flex;
             justify-content: space-evenly;
             margin: 0.5rem 0;
@@ -86,5 +86,26 @@ $info-color: #5565DF;
         button {
             width: 33%;
         }
+    }
+}
+
+.message {
+    padding: 0.75rem;
+    background-color: $danger-color;
+    color: white;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0.5rem;
+
+    .cross {
+        color: white;
+        cursor: pointer;
+        font-size: 2rem;
+    }
+
+    .cross:hover {
+        color: black;
     }
 }
