--- a/src/assets/sass/add-players/_add-players.scss
+++ b/src/assets/sass/add-players/_add-players.scss
@@ -1,73 +1,11 @@
-.new-player-entry {
-    padding: 0.75rem;
-    margin-top: 0.5rem;
-
-    #new-player-form {
-        display: flex;
-        justify-content: space-between;
-
-        input[type="text"] {
-            width: 75%;
-            font-size: 1.25rem;
-            border: 2px solid $textbox-border-color;
-            border-radius: 10px;
-            padding: 0.75rem;
-            outline: none;
-        }
-
-        button {
-            width: 15%;
-            font-size: 1.25rem;
-            padding: 0.75rem;
-        }
-    }
-}
-
-.message {
-    padding: 0.75rem;
-    background-color: $danger-color;
-    color: white;
-    text-transform: uppercase;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .cross {
-        color: white;
-        font-weight: bold;
-        cursor: pointer;
-        transition: 0.3s;
-    }
-
-    .cross:hover {
-        color: black;
-    }
-}
-
 .list-container {
-    padding: 0.75rem;
-    margin-top: 0.5rem;
-
-    .buttons-group {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        button {
-            width: 5rem;
-        }
-    }
 
     .players-list {
-        min-height: 30vh;
-        max-height: 60vh;
+        padding: 0.5rem;
+        min-height: 45vh;
+        max-height: 45vh;
         overflow-y: scroll;
         margin-top: 0.5rem;
-
-        button {
-            width: 48px;
-            height: 10px;
-        }
 
         table {
             border-collapse: collapse;
@@ -76,9 +14,9 @@
             text-align: center;
         }
     
-        tr {        
+        tr {  
             .actions {
-                width: 5rem;
+                width: 2rem;
             }
         }
     
@@ -101,6 +39,7 @@
     }
 }
 
+/* Hide scrollbar for */
 .players-list {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
@@ -109,4 +48,45 @@
 /* Hide scrollbar for Chrome, Safari and Opera */
 .players-list::-webkit-scrollbar {
     display: none;
+}
+
+.actions-container {
+
+    .new-player-entry {
+        padding: 0.5rem;
+        margin-top: 0.5rem;
+    
+        #new-player-form {
+            display: flex;
+            justify-content: space-between;
+    
+            input[type="text"] {
+                width: 75%;
+                font-size: 1.25rem;
+                border: 2px solid $textbox-border-color;
+                border-radius: 10px;
+                padding: 0.75rem;
+                outline: none;
+            }
+    
+            button {
+                width: 15%;
+                font-size: 1.25rem;
+                padding: 0.75rem;
+            }
+        }
+    }
+
+    .buttons-group {
+        margin-top: 0.5rem;
+
+        div {
+            display: flex;
+            justify-content: center;
+
+            button {
+                width: 7rem;
+            }
+        }
+    }
 }
