need to style and refactor code

--- a/src/assets/sass/_shared-classes.scss
+++ b/src/assets/sass/_shared-classes.scss
@@ -23,7 +23,8 @@ $info-color: #5565DF;
 .log-in-button,
 .register-button,
 .account-button,
-.friends-button {
+.friends-button,
+.stats-button {
     background-color: $info-color;
 }
 
