--- a/src/assets/sass/rules/_rules.scss
+++ b/src/assets/sass/rules/_rules.scss
@@ -1,43 +1,31 @@
-.game-rules {
+.rules-section {
 
-    .general-info {
+    hr {
+        margin: 0;
+    }
+
+    .name {
+        display: flex;
+        justify-content: center;
+        margin: 0.5rem 0;
+    }
+
+    .wrapper {
         overflow-y: scroll;
-        max-height: 80vh;
-
-        .name {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            margin: 0.5rem 0;
-        }
-
-        hr {
-            margin-top: 0.2rem;
-        }
+        max-height: 70vh;
 
         .rules {
             padding: 1rem;
         }
     }
 
-    .nav-actions {
+    .buttons {
         display: flex;
         justify-content: center;
 
         button {
+            margin: 0.5rem 0;
             width: 30%;
         }
     }
-}
-
-.general-info {
-    -ms-overflow-style: none;
-    /* IE and Edge */
-    scrollbar-width: none;
-    /* Firefox */
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.general-info::-webkit-scrollbar {
-    display: none;
 }
