--- a/src/assets/sass/add-players/components/_players-list.scss
+++ b/src/assets/sass/add-players/components/_players-list.scss
@@ -1,8 +1,8 @@
-.add-players-section {
+.players-list-section {
     .wrapper {
         padding: 1rem;
-        min-height: 45vh;
-        max-height: 45vh;
+        min-height: 40vh;
+        max-height: 40vh;
         overflow-y: scroll;
     }
 
