stats view, profile view

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -13,8 +13,10 @@
 @import "./add-players/components/player-name-entry-section";
 @import "./add-players/components/buttons-group-section";
 @import "./add-players/components/friends-list-section";
-
-
+// profile view
+@import "./acount/profile/profile-section";
+// stats view
+@import "./stats/stats-section";
 
 
 // fix it
