--- a/src/assets/sass/_shared-classes.scss
+++ b/src/assets/sass/_shared-classes.scss
@@ -24,7 +24,8 @@ $info-color: #5565DF;
 .register-button,
 .account-button,
 .friends-button,
-.stats-button {
+.stats-button,
+.profile-button {
     background-color: $info-color;
 }
 
