--- a/src/assets/sass/stats/_stats-section.scss
+++ b/src/assets/sass/stats/_stats-section.scss
@@ -6,7 +6,7 @@
 
         .table-wrapper {
             overflow-y: scroll;
-            max-height: 80vh;
+            height: 80vh;
 
             table {
                 border-collapse: collapse;
