--- a/src/assets/sass/home/components/_games-list-section.scss
+++ b/src/assets/sass/home/components/_games-list-section.scss
@@ -57,6 +57,7 @@
             .actions-list {
                 display: flex;
                 flex: 1;
+                justify-content: center;
 
                 button {
                     margin: 0 0.3rem;
