--- a/src/assets/sass/game-results/_game-results.scss
+++ b/src/assets/sass/game-results/_game-results.scss
@@ -1,27 +1,4 @@
-.winner-info {
-    padding: 0.3rem;
-
-    table {
-        border-collapse: collapse;
-        width: 100%;
-        table-layout: fixed;
-        text-align: center;
-
-        td  {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            width: 0.5rem;
-            font-size: 1.5rem;
-        }
-
-        .player {
-            width: 1.5rem;
-        }
-    }
-}
-
-.game-results {
+#game-results-section {
     margin-top: 0.5rem;
     padding: 0.3rem;
 
@@ -30,59 +7,4 @@
         justify-content: center;
     }
 
-    .results-table {
-        max-height: 70vh;
-        overflow-y: scroll;
-
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            table-layout: fixed;
-            text-align: center;
-        }
-    
-        tr {
-            .place {
-                width: 5rem;
-            }
-        
-            .points {
-                width: 5rem;
-            }
-        }
-    
-        td, th {
-            border: 1px solid #dddddd;
-            padding: 8px;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-    
-        tr:nth-child(even) {
-            background-color: #dddddd;
-        }
-
-    }
-
-    .actions {
-        margin-top: 0.5rem;
-        display: flex;
-        justify-content: center;
-
-        button {
-            width: 30%;
-        }
-    }
-}
-
-/* Hide scrollbar for Firefox, IE and Edge */
-.results-table {
-    scrollbar-width: none;  /* Firefox */
-    -ms-overflow-style: none;  /* IE and Edge */
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.results-table::-webkit-scrollbar {
-    display: none;
 }
