added stats delete functionality

--- a/src/assets/sass/stats/_stats.scss
+++ b/src/assets/sass/stats/_stats.scss
@@ -25,7 +25,11 @@
                 }
 
                 .name {
-                    width: 50%;
+                    width: 35%;
+                }
+
+                .actions {
+                    width: 15%;
                 }
             }
 
