--- a/src/assets/sass/_shared-classes.scss
+++ b/src/assets/sass/_shared-classes.scss
@@ -40,6 +40,7 @@ $info-color: #5565DF;
 .miss-button,
 .remove-button,
 .cancel-button,
-.log-out-button {
+.log-out-button,
+.delete-button {
     background-color: $danger-color;
 }
